Fixing pointer events on firefox.

--- a/app/style.styl
+++ b/app/style.styl
@@ -16,7 +16,7 @@ body
   min-width 400px
 
   .control
-    pointer-events bounding-box
+    pointer-events all
 
   [class*="col-"]
     padding 1px
@@ -132,7 +132,6 @@ input.form-control[type="range"]
   input&
     line-height 14px
     outline none
-    pointer-events bounding-box
 
   .success
     color rgb(152, 243, 174)
@@ -143,6 +142,7 @@ input.form-control[type="range"]
   &-wrap
     background rgba(0, 0, 0, 0.50)
     width 600px
+    pointer-events all
 
   &-container
     pointer-events none
